--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
   "author": "sesnala@163.com",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "build:watch": "tsc -p tsconfig.json  -w --preserveWatchOutput",
-    "dev": "NODE_ENV=development node build/app.js",
-    "start": "(NODE_ENV=live node build/app.js > app.log &)"
+    "dev": "NODE_ENV=development node src/app.js",
+    "start": "(NODE_ENV=live node src/app.js > app.log &)"
   },
   "dependencies": {
-    "koa": "^2.12.0"
+    "koa": "^2.12.0",
+    "koa-favicon": "^2.1.0",
+    "koa-static": "^5.0.0"
   },
-  "devDependencies": {
-    "@types/koa": "^2.11.3",
-    "typescript": "^3.9.3"
-  }
+  "devDependencies": {}
 }
