--- a/be/package.json
+++ b/be/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development node src/app.js",
-    "start": "(NODE_ENV=live node src/app.js > app.log &)"
+    "start": "(NODE_ENV=prod node src/app.js > app.log &)"
   },
   "dependencies": {
     "koa": "^2.12.0",
     "koa-favicon": "^2.1.0",
-    "koa-static": "^5.0.0"
+    "koa-router": "^9.0.1",
+    "koa-static": "^5.0.0",
+    "pug": "^3.0.0"
   },
   "devDependencies": {}
 }
