--- a/fe/package.json
+++ b/fe/package.json
@@ -2,5 +2,18 @@
   "name": "fe",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "snowpack dev",
+    "build": "snowpack build"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@snowpack/plugin-webpack": "^1.1.0",
+    "snowpack": "^2.1.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.10.2",
+    "sass": "^1.26.8"
+  }
 }
